# Arx-Bank-Server

./: .dockerignore  .env.example  .pylintrc  Dockerfile  README.md  alembic.ini  compose.yaml  env.py  face_encodings.pkl  face_encodings_backup.pkl  migrations.sql  pyproject.toml
.github/workflows/: build-release.yml
devops/: startup.sh
devops/kubernetes/: deploy.yaml  postgres.yaml  redis.yaml
src/arx_bank_server/: __main__.py
src/arx_bank_server/camera/: __init__.py  camera.py  register.py
src/arx_bank_server/mail/: __init__.py  send_mail.py
src/arx_bank_server/migrations/: env.py
src/arx_bank_server/migrations/versions/: c4edc895bb6f_init.py
src/arx_bank_server/models/: __init__.py  db.py  face_data_handling.py
src/arx_bank_server/routers/: __init__.py  camera.py  healthcheck.py  login.py  register.py  utils.py
src/arx_bank_server/setup/: __init__.py  endpoint_logging_filter.py  global_settings.py  logger.py  queues.py  types.py
src/arx_bank_server/tasks/: __init__.py  training_tasks.py
